# my-chemical-music

./: .gitignore  CMakeLists.txt  README.txt  main.cpp
MCM_EXE/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  conexion.ini.example  mcm-local-dev.cer  mcm_qt.exe.manifest
MCM_EXE/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
MCM_EXE/mcm_qt_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
MCM_EXE/mcm_qt_autogen/I2ZPGKMPKC/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
MCM_EXE/mcm_qt_autogen/include/: ui_mainwindow.h
dao/: CategoriaDAO.h  ClienteDAO.h  CompraProveedorDAO.h  DetalleCompraDAO.h  DetalleVentaDAO.h  EstadoServicioDAO.h  FacturaDAO.h  MarcaDAO.h  MedioPagoDAO.h  ProductoDAO.h  ProveedorDAO.h  ServicioDAO.h  UsuarioDAO.h  VentaDAO.h
database/: ConexionBD.h  my_chemical_music.sql
mcm_qt/: inicio_aplicacion.cpp  login_dialog.cpp  login_dialog.h  mainwindow.cpp  mainwindow.h  ventana_principal.h  ventana_principal_datos.cpp  ventana_principal_interfaz.cpp
mcm_qt/acciones/: acciones_clientes.cpp  acciones_compras.cpp  acciones_datos_generales.cpp  acciones_facturacion.cpp  acciones_productos.cpp  acciones_servicios.cpp  acciones_usuarios.cpp  acciones_ventas.cpp
mcm_qt/formularios/: formularios_clientes.cpp  formularios_compras.cpp  formularios_datos_generales.cpp  formularios_facturacion.cpp  formularios_productos.cpp  formularios_servicios.cpp  formularios_ventas.cpp
mcm_qt/utilidades/: utilidades_detalles.cpp  utilidades_fecha.h  utilidades_seleccion.cpp
menus/: MenuClientes.cpp  MenuClientes.h  MenuComprasProveedores.cpp  MenuComprasProveedores.h  MenuConfiguracion.cpp  MenuConfiguracion.h  MenuFacturacion.cpp  MenuFacturacion.h  MenuProductos.cpp  MenuProductos.h  MenuProveedores.cpp  MenuProveedores.h  MenuServicios.cpp  MenuServicios.h  MenuVentas.cpp  MenuVentas.h  Menus.h
models/: Categoria.h  Cliente.h  CompraProveedor.h  DetalleCompra.h  DetalleVenta.h  EstadoServicio.h  Factura.h  Marca.h  MedioPago.h  Producto.h  Proveedor.h  Servicio.h  Usuario.h  Venta.h
